@@ -104,6 +104,10 @@ if [ $UNIVERSAL = 1 ]; then
 		-arch x86_64 $PKGROOT/opt/$PACKAGE_NAME/bin/jpegtran \
 		-output $PKGROOT/opt/$PACKAGE_NAME/bin/jpegtran
 	lipo -create \
+		-arch i386 $TMPDIR/dist.x86/opt/$PACKAGE_NAME/bin/jpgtest \
+		-arch x86_64 $PKGROOT/opt/$PACKAGE_NAME/bin/jpgtest \
+		-output $PKGROOT/opt/$PACKAGE_NAME/bin/jpgtest
+	lipo -create \
 		-arch i386 $TMPDIR/dist.x86/opt/$PACKAGE_NAME/bin/rdjpgcom \
 		-arch x86_64 $PKGROOT/opt/$PACKAGE_NAME/bin/rdjpgcom \
 		-output $PKGROOT/opt/$PACKAGE_NAME/bin/rdjpgcom
